--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
   Test::More: 0
 configure_requires:
   Module::Build: 0.36
-generated_by: 'Module::Build version 0.3603'
+generated_by: 'Module::Build version 0.3607'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,12 +16,14 @@ name: Parallel-Runner
 provides:
   Parallel::Runner:
     file: lib/Parallel/Runner.pm
-    version: 0.006
+    version: 0.007
 requires:
+  Child: 0.009
   POSIX: 0
   Time::HiRes: 0
 resources:
   bugtracker: http://github.com/exodist/Parallel-Runner/issues
+  homepage: http://open-exodus.net/projects/parrallel-runner
   license: http://dev.perl.org/licenses/
   repository: http://github.com/exodist/Parallel-Runner
-version: 0.006
+version: 0.007
